Add compiling Jigsaw modules configuration